2005-10-08  Simon Josefsson  <jas@extundo.com>

	* pgg-parse.el (top-level): Don't require custom, it is
	autoloaded.  (To sync with No Gnus.)

2005-05-09  Simon Josefsson  <jas@extundo.com>

	* pgg-gpg.el (pgg-gpg-possibly-cache-passphrase): Fix PIN caching,
	tiny patch from "Georg C. F. Greve" <greve@gnu.org>.

2005-10-08  Simon Josefsson  <jas@extundo.com>

	* pgg-def.el (top-level): Don't require custom, it is
	autoloaded.  (To sync with No Gnus.)

2005-10-04  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-url.el (mm-url-predefined-programs): Add switches for curl.

	* gnus-util.el (gnus-remove-duplicates): Remove.

	* nnmail.el (nnmail-article-group): Use mm-delete-duplicates
	instead of gnus-remove-duplicates.

	* message.el (message-remove-duplicates): Remove.
	(message-idna-to-ascii-rhs-1): Use mm-delete-duplicates instead of
	message-remove-duplicates.

	* mm-util.el (mm-delete-duplicates): Use `delete-dups' if
	available, else use implementation from `delete-dups'.

2005-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* time-date.el: Autoload parse-time-string, XEmacs needs it.

2005-09-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-decode.el (mm-inline-media-tests): Check presence of the diff-mode
	function rather than the diff-mode.el package.
	(mm-display-external): Use with-current-buffer.
	(mm-viewer-completion-map, mm-viewer-completion-map):
	Move initialization inside declaration.

2005-09-28  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el: Remove useless autoloads.

2005-09-28  Simon Josefsson  <jas@extundo.com>

	* message.el (message-use-idna): Default to t.
	(message-use-idna): Test whether encoding works too.  Doc fix.

2005-09-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-warn-about-losing-connection): Remove.

2005-09-27  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-uu.el (mm-uu-emacs-sources-regexp): Make variable
	customizable.  Change default value.
	(mm-uu-diff-groups-regexp): Change default value.